[package]
name = "plugin_library"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
plugin_api = { workspace = true }
stabby = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }